<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deck Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="edit_length">Enter Length In Inches</string>
    <string name="edit_width">Enter Width In Inches</string>
    <string name="edit_height">Enter Height In Inches</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_save">Save</string>
    <string name="title_activity_display_calculations">Configuration Summary</string>
    <string name="text_view">       </string>
    <string name="calc_error">Unable to Calculate</string>

</resources>
