<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalulatorMain" >   
	
    <EditText android:id="@+id/edit_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_length"
        android:inputType="numberSigned" />
    
    <EditText android:id="@+id/edit_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_width"
        android:inputType="numberSigned" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:onClick="overallCalc" />
    
</LinearLayout>
